# inventorer

./: .env  Cargo.toml  README.md  development.db
migrations/2019-04-13-120445_create_inventory/: down.sql  up.sql
src/: item.rs  lib.rs  location.rs  models.rs  schema.rs  team.rs  user.rs  warehouse.rs
