[package]
name = "inventorer"
version = "0.1.0"
authors = ["Francis Begyn <francis.begyn@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.13.0"
actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.6.1"
